--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -18,7 +18,7 @@ images:
 - name: vsphere-cloud-controller-manager
   sourceRepository: github.com/MartinWeindel/cloud-provider-vsphere
   repository: eu.gcr.io/gardener-project/test/cloud-provider-vsphere-martinweindel
-  tag: v1.2.0-33-g27d58e9
+  tag: v1.22.0-patch1
   #repository: gcr.io/cloud-provider-vsphere/cpi/release/manager
   #tag: v1.0.0
 - name: machine-controller-manager
